# codex-network-py

./: .env.example  .gitignore  Dockerfile  Jenkinsfile  README.md  docker-compose.yml  format.sh  main.py  network_monitor.py  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: dev.yml
monitor/: alerts.py  config.py  db.py  reports.py  scheduler.py  sla.py  speedtest.py
tests/: conftest.py  test_email_reports.py  test_network_monitor.py
