[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codex-network-py"
version = "0.1.0"
description = "Network performance monitor with ISP SLA breach detection"
requires-python = ">=3.10"
dependencies = [
    "speedtest-cli>=2.1.3",
    "requests>=2.33.1",
    "psycopg2-binary>=2.9.12",
    "schedule>=1.2.1",
    "reportlab>=4.5.0",
    "python-dotenv>=1.2.2",
]

[tool.hatch.build.targets.wheel]
packages = ["monitor", "tests"]

[dependency-groups]
dev = [
    "pytest>=8.0.2",
    "pytest-mock>=3.12.0",
    "pytest-env>=1.1.3",
]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning",
]
